1，新增加angular和springboot整合示例 2，增加ssl证书示例 2，部分代码修正（增加不同服务器的配置）

--- a/spring_boot/src/main/resources/application.properties
+++ b/spring_boot/src/main/resources/application.properties
@@ -1,16 +1,19 @@
-server.port=9090    
-
+server.port=9099    
 #  @Value("${book.name}")引用
-book.name = hjd
-
+book.name=hjd
 #@ConfigurationProperties(prefix = "user")引用
-user.names = huangjundong2
-user.age = 24
-
-logging.file = D:/temp/myProject/spring_boot/log.log
-logging.level.org.springframework.web = debug
-
+user.names=huangjundong2
+user.age=24
+logging.file=D:/temp/myProject/spring_boot/log.log
+logging.level.org.springframework.web=debug
+spring.mvc.view.suffix=.html
 #指定活动的工程，依据 application-{profile}.properties来决定
-spring.profiles.active= prod
+#spring.profiles.active= prod
 #自动配置报告1
 #debug=true
+
+#ssl证书
+#server.ssl.key-store=spring_boot/src/main/resources/static/.keystore
+#server.ssl.key-store-password=111111
+#server.ssl.keyStoreType=JKS
+#server.ssl.key-alias=: tomcat
