完善部分代码

--- a/spring_boot/src/main/resources/application.properties
+++ b/spring_boot/src/main/resources/application.properties
@@ -17,3 +17,8 @@ spring.mvc.view.suffix=.html
 #server.ssl.key-store-password=111111
 #server.ssl.keyStoreType=JKS
 #server.ssl.key-alias=: tomcat
+
+#定制监控访问端口
+management.server.port=8081 
+
+spring.jackson.serialization.indent_output=true
