--- a/spring_boot/pom.xml
+++ b/spring_boot/pom.xml
@@ -23,12 +23,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <exclusions>
+                <!--去除自默认的Tomcat-->
                 <exclusion>
                     <groupId>org.springframework.boot</groupId>
-                    <!--<artifactId>spring-boot-starter-jetty</artifactId>-->
                     <artifactId>spring-boot-starter-tomcat</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <!--jetty服务器-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jetty</artifactId>
         </dependency>
 
         <dependency>
@@ -37,12 +42,26 @@
             <scope>test</scope>
         </dependency>
 
-		<dependency>
-			<groupId> org.springframework.boot </groupId>
-			<artifactId> spring-boot-configuration-processor </artifactId>
-			<optional> true </optional>
-		</dependency>
-	</dependencies>
+<!--PropertySource属性配置文件  @PropertySource -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <!--监控-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-remote-shell</artifactId>
+        </dependency>
+    </dependencies>
+
+
 
     <build>
         <plugins>
