spring-boot-jpa 完善

--- a/spring_data/src/main/resources/application.properties
+++ b/spring_data/src/main/resources/application.properties
@@ -21,8 +21,7 @@ spring.datasource.sql-script-encoding=utf-8
 #validate：启动时验证实体类和数据表是否一致，在我们数据结构稳定时采用此选项。
 #none：不采取任何措施。
 spring.jpa.hibernate.ddl-auto=update
-#2spring.jpa.show-sql用来设置hibernate操作的时候在控制
-台显示其真实的sql语句
+#2spring.jpa.show-sql用来设置hibernate操作的时候在控制台显示其真实的sql语句
 spring.jpa.show-sql=true
 #3让控制器输出的json字符串格式更美观
 spring.jackson.serialization.indent_output=true
