--- a/spring_boot/src/main/resources/application.properties
+++ b/spring_boot/src/main/resources/application.properties
@@ -1,14 +1,22 @@
-server.port=9099    
+server.port=9091  
+
+# 配置访问的根路径  静态资源访问的默认路径为：Mapped to ResourceHttpRequestHandler ["classpath:/META-INF/resources/", "classpath:/resources/", "classpath:/static/", "classpath:/public/", "/"]
+#server.servlet.context-path=/rs
+
 #  @Value("${book.name}")引用
 book.name=hjd
 #@ConfigurationProperties(prefix = "user")引用
-user.names=huangjundong2
-user.age=24
+
+#user.names=huangjundong2
+#user.age=24
+
 logging.file=D:/temp/myProject/spring_boot/log.log
-logging.level.org.springframework.web=debug
-spring.mvc.view.suffix=.html
+logging.level.org.springframework.web = debug
+
 #指定活动的工程，依据 application-{profile}.properties来决定
 #spring.profiles.active= prod
+
+
 #自动配置报告1
 #debug=true
 
