--- a/thymeleaf_demo/pom.xml
+++ b/thymeleaf_demo/pom.xml
@@ -33,6 +33,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+	<!--代码热部署-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -43,5 +49,7 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
 
 </project>
