--- a/springboot_mybatis/src/main/resources/application.properties
+++ b/springboot_mybatis/src/main/resources/application.properties
@@ -7,7 +7,11 @@ spring.datasource.url=jdbc:mysql://127.0.0.1/sboot2?useUnicode=true&characterEnc
 # 扫描实体,批量定义别名
 #mybatis.type-aliases-package=com.itheima.domain
 # mapper.xml配置文件路径
-mybatis.mapper-locations=classpath:mapper/*Mapper.xml
+#mybatis.mapper-locations=classpath:mapper/*Mapper.xml
+
+#java后台传递时间到前台相差8个小时的时区问题和格式问题
+spring.jackson.date-format = yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone = GMT+8
 
 server.port=8099
 
@@ -20,6 +24,9 @@ logging.level.com.itheima = debug
 logging.file=hjd.log.txt
 logging.pattern.console=%d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n
 logging.pattern.file=%d{yyyy/MM/dd-HH:mm} [%thread] %-5level %logger- %msg%n
-mybatis-plus.global-config.db-config.tableUnderline=true
+
+#开启驼峰
+mybatis-plus.global-config.db-config.tableUnderline= true
+mybatis-plus.mapper-locations= classpath:mapper/*Mapper.xml
 
 
